--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -92,16 +92,21 @@
           });
       };
       // --------------------- END OF STEP 2
+       const getEvents = document.getElementById("getEvents");
+        const events = document.getElementById("events");
+        const getCalendarEvents = "https://van3svu5y7.execute-api.eu-central-1.amazonaws.com/dev/api/get-events"
 
-
-
-
-
-
-
-
-
-      
+        getEvents.onclick = function () {
+          const { access_token } = JSON.parse(accessTokenElement.innerText);
+          const eventRequest = getCalendarEvents + "/" + access_token;
+          fetch(eventRequest)
+            .then(function (response) {
+              return response.json();
+            })
+            .then(function (json) {
+              events.innerText = JSON.stringify(json, null, 2);
+            });
+        };
     </script>
   </body>
 </html>
