--- a/static-site-test/test-auth-server.html
+++ b/static-site-test/test-auth-server.html
@@ -26,8 +26,6 @@
         <p id="result"></p>
         <a id="authURL" href target="_blank">Click to authorize</a>
 
-        <!-- STEP 2 -- MAKE SURE STEP 1 WORKS BEFORE MOVING ON-->
-
       <h4>Step 2: Get your code and exchange for an access token</h4>
       <p>
         After you’re redirected back to your Meet app on GitHub, copy the code
@@ -40,19 +38,22 @@
       </label>
       <button id="getToken">Get Token</button>
       <p id="accessToken"></p>
+
+      <h4>Step 3: Get the calendar events using your access token</h4>
+      <button id="getEvents">Get Events</button>
+      <p id="events"></p>
     </main>
 
     <script type="text/javascript">
-
-      // --------------------- STEP 1
-      const getURLElement = document.getElementById("getURL");
+      const getCodeElement = document.getElementById("getCode");
+      //const getURLElement = document.getElementById("getURL");
       const resultElement = document.getElementById("result");
       const resultLink = document.getElementById("authURL");
-      // Replace this with your own endpoint
       const getAuthURL =
         "https://71l6u91k11.execute-api.eu-central-1.amazonaws.com/dev/api/get-auth-url";
 
-      getURLElement.onclick = function () {
+      //getURLElement.onclick = function
+      getCodeElement.onclick = function () {
         fetch(getAuthURL)
           .then(function (response) {
             return response.json();
@@ -66,14 +67,12 @@
             resultLink.href = authUrl;
           });
       };
-      // --------------------- END OF STEP 1
 
-      // --------------------- STEP 2
       const codeValue = document.getElementById("code");
       const getAccessToken = document.getElementById("getToken");
       const accessTokenElement = document.getElementById("accessToken");
       const getToken =
-        "YOUR_LAMBDA_GET_TOKEN_ENDPOINT";
+        "https://71l6u91k11.execute-api.eu-central-1.amazonaws.com/dev/api/token";
 
       getAccessToken.onclick = function () {
         let code = codeValue.value;
@@ -91,11 +90,10 @@
             accessTokenElement.innerText = JSON.stringify(json);
           });
       };
-      // --------------------- END OF STEP 2
+   
        const getEvents = document.getElementById("getEvents");
         const events = document.getElementById("events");
-        const getCalendarEvents = "https://van3svu5y7.execute-api.eu-central-1.amazonaws.com/dev/api/get-events"
-
+        const getCalendarEvents = "https://71l6u91k11.execute-api.eu-central-1.amazonaws.com/dev/api/get-events";
         getEvents.onclick = function () {
           const { access_token } = JSON.parse(accessTokenElement.innerText);
           const eventRequest = getCalendarEvents + "/" + access_token;
